--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+
 import Layout from '../layouts/Layout.astro';
 import Profile from '../components/home/Profile.astro';
 import Features from '../components/home/Features.astro';
@@ -8,6 +9,7 @@ import Faq from '@/components/home/Faq.astro';
 import Partner from '@/components/home/Partner.astro';
 import Footer from '@/components/home/Footer.astro';
 import Hero from '@/components/home/Hero.astro';
+import Gallery from '@/components/home/Gallery.astro';
 
 
 
@@ -21,6 +23,7 @@ import Hero from '@/components/home/Hero.astro';
 	<Produk/>
 	<Faq/>
 	<Partner/>
+	<Gallery/>
 	<Footer/>
 	
 		
