--- a/src/components/kertas/Main.astro
+++ b/src/components/kertas/Main.astro
@@ -10,14 +10,14 @@ const response = await getProductList()
     <h1 class="text-6xl font-bold">Products</h1>
     <div class="grid lg:grid-cols-3 gap-4">
    {response?.results.map((list: any) => (
-            <div class="">
-      <Image class="" src={list.product.product_image} width={1000} height={1000} alt={list.product.product_image_alt} />
+            <a class="" href={`/product/${list.url_slug}`}>
+      <Image class="mb-2" src={list.product.product_image} width={1000} height={1000} alt={list.product.product_image_alt} />
       <h1
-        class={'text-black'}
+        class={'text-black font-bold'}
       >
         {list.product.title}
       </h1>
-    </div>
+    </a>
           ))
    }
     </div>
