--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+export const prerender = true;
 import Layout from '../layouts/Layout.astro';
 import Profile from '../components/home/Profile.astro';
 import Features from '../components/home/Features.astro';
