--- a/src/pages/product.astro
+++ b/src/pages/product.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = true;
 import Footer from "@/components/home/Footer.astro";
 import Layout from "../layouts/Layout.astro";
 import Description from "@/components/kertas/Description.astro";
