--- a/src/components/ContactUsCom.astro
+++ b/src/components/ContactUsCom.astro
@@ -4,7 +4,7 @@ import FormCom from "./Form"
 
 ---
 
-<section class="grid grid-cols-1 lg:grid-cols-2 justify-center items-center">
+<section class="grid grid-cols-1 lg:grid-cols-2 pb-20 md:pb-24 lg:pb-28 justify-center items-center">
     <div class="p-10 ">
         <iframe
           class="h-[300px] sm:h-[450px] md:h-[600px] lg:h-[450px] xl:h-[600px] w-full"
