--- a/src/components/home/Produk.astro
+++ b/src/components/home/Produk.astro
@@ -21,7 +21,7 @@ const {pathname} = Astro.url
           <span>
             <p>Lihat daftar produk kertas berkualitas kami</p>
           </span>
-          <a class="text-black bg-white hover:text-white hover:bg-black px-4 py-2 rounded-xl" href="/product">Lihat Semua</a>
+          <a class="text-black bg-white hover:text-white hover:bg-black px-4 py-2 rounded-xl flex items-center justify-center" href="/product">Lihat Semua</a>
         </div>
       </div>
 
