--- a/src/components/kertas/ProductDetail.astro
+++ b/src/components/kertas/ProductDetail.astro
@@ -5,13 +5,13 @@ const {response} =Astro.props
 
 ---
 
-<div class="flex justify-center items-center ">
+<div class="flex justify-center items-center">
     <div class="grid grid-cols-1 md:grid-cols-2 items-center justify-center space-y-2 md:space-x-20 py-10 px-10">
       <span class="flex flex-col items-center md:items-start  justify-center space-y-10">
         <h1 class="text-2xl font-bold">{response.product.title}</h1>
         <p>{response.description}</p>
       </span>
-      <span class="">
+      <span class="p-12">
         <Image
           src={response.product.product_image}
           class="rounded-img w-full"
