--- a/src/components/home/Features.astro
+++ b/src/components/home/Features.astro
@@ -6,17 +6,17 @@ import {  getKeunggulan } from '../../helpers/rajaKertas';
 const response = await getKeunggulan()
 ---
 
-<section class="px-[10%] py-16 md:py-24 lg:py-28 bg-brownkertas text-white ">
+<section class="px-[7%] py-20 md:py-24 lg:py-28 bg-brownkertas text-white ">
     <div class="container">
       <div class="grid grid-cols-1 gap-y-12 lg:grid-cols-2 lg:items-center lg:gap-x-20">
         <div class="grid grid-cols-1 gap-x-10 gap-y-8 py-2 md:grid-cols-2">
           {response?.value.map((unggul: any) => {
                 return (
                   <div>
-                    <div class="mb-3 md:mb-4">
+                    <div>
                       <Image
                         src={"/images/icon.svg"}
-                        class="size-12"
+                        // class="size-12"
                         alt={unggul.title}
                         width={100}
                         height={100}
