--- a/src/components/home/Gallery.astro
+++ b/src/components/home/Gallery.astro
@@ -10,7 +10,7 @@ const {pathname} = Astro.url
 
     <div class="space-y-6 pl-6">
         <h1 class="text-4xl font-bold">Galeri Gambar</h1>
-        <p>"Lihat berbagai penggunaan kertas dalam industri yang berbeda."</p>
+        <p>Lihat berbagai penggunaan kertas dalam industri yang berbeda.</p>
     </div>
   
     <CarouselComponent client:load gallery={response.results} produk={[]} type="gallery" pathname={pathname} />
