--- a/src/components/home/Profile.astro
+++ b/src/components/home/Profile.astro
@@ -6,22 +6,23 @@ import {  getTentangKami } from '../../helpers/rajaKertas';
 const response = await getTentangKami()
 ---
 
-<div class="grid grid-cols-1 lg:grid-cols-2 p-10 bg-white space-y-2">
-
-      <div class="md:p-20">
+<div class="grid grid-cols-1 lg:grid-cols-2 px-[7%] py-20 md:py-24 lg:py-28 bg-white gap-x-20">
+      <div class="lg:px-6 py-4">
         <Image
           src={response.app_config_image}
-          class="w-full h-[300px] md:h-[500px] rounded-[30px]"
+          class="rounded-img h-[300px] md:h-[500px]"
+          width={1000}
+          height={1000}
           alt={response.value.product_image_alt}
-          inferSize
         />
       </div>
 
 
 
-      <div class="text-black flex flex-col items-start justify-center space-y-6">
+      <div class="text-black flex flex-col items-start justify-center space-y-2">
         <span class="text-6xl">{response.value.title}</span>
-        <span>
+
+        <span class="text-lg">
           <p>{response.value.description}</p>
         </span>
       </div>
