--- a/src/components/kertas/Pemesanan.astro
+++ b/src/components/kertas/Pemesanan.astro
@@ -5,13 +5,13 @@ const {title} =Astro.props
 const response =await getWhatsapp()
 ---
 
-<div class="md:py-20 md:px-20 py-4 px-10 grid grid-cols-1 md:grid-cols-2">
-    <div class="text-2xl font-bold space-y-6">
+<div class="py-20 md:py-24 lg:py-28 md:px-20 px-10 grid grid-cols-1 md:grid-cols-2">
+    <div class="text-xl lg:text-2xl font-semibold space-y-6">
       <h1>Pemesanan {title}</h1>
       <p>Sekarang Juga</p>
     </div>
     <div class="items-start justify-center flex flex-col">
-      <p class="text-xl mb-4">
+      <p class="mb-4 text-base lg:text-lg">
         Kami menyediakan {title} berkualitas tinggi dengan harga
         terjangkau. Hubungi kami sekarang untuk informasi lebih lanjut.
       </p>
