--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -8,9 +8,9 @@ body {
 }
 
 body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  /* background: #eee;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif; */
+  /* font-size: 14px; */
   color: #000;
   margin: 0;
   padding: 0;
