--- a/src/components/home/Features.astro
+++ b/src/components/home/Features.astro
@@ -22,10 +22,10 @@ const response = await getKeunggulan()
                         height={100}
                       />
                     </div>
-                    <h1 class="mb-2 text-lg lg:text-xl font-bold md:mb-4 md:text-2xl">
+                    <h1 class="mb-2 text-lg font-bold md:mb-4">
                       {unggul.title}
                     </h1>
-                    <p>{unggul.description}</p>
+                    <p class="text-sm">{unggul.description}</p>
                     <div class="mt-5 flex items-center gap-x-4 md:mt-6"></div>
                   </div>
                 );
