--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,7 +48,7 @@ const { title="Rajakertas", description ="Rajakertas", image="./images/band.jpg"
 	<body class="min-h-screen">
 
 		<Nav client:load/>
-		<Toastify client:load/>
+		<!-- <Toastify client:load/> -->
 		<Whatsapp/>
 		<slot />
 	</body>
