--- a/src/components/home/Profile.astro
+++ b/src/components/home/Profile.astro
@@ -19,10 +19,10 @@ const response = await getTentangKami()
 
 
 
-      <div class="text-black flex flex-col items-start justify-center space-y-2">
-        <span class="text-6xl">{response.value.title}</span>
+      <div class="text-black flex flex-col items-start justify-center space-y-6">
+        <span class="text-3xl md:text-4xl font-bold lg:text-5xl">{response.value.title}</span>
 
-        <span class="text-lg">
+        <span class="text-md lg:text-lg">
           <p>{response.value.description}</p>
         </span>
       </div>
