--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,7 @@ interface Props {
 }
 
 const { title="Rajakertas", description ="Rajakertas", image="./images/band.jpg" } = Astro.props;
+console.log(Astro.url)
 ---
 
 <!doctype html>
