--- a/src/components/Seo.astro
+++ b/src/components/Seo.astro
@@ -19,7 +19,7 @@ const jsonLD = jsonLDGenerator({
 ---
 
 <!-- SEO -->
-<link rel="canonical" href={url} />
+<link rel="canonical" href={"https://rajakertas.id/"} />
 
 <!-- Open Graph -->
 <meta property="og:site_name" content="RajaKertas" />
