--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ interface Props {
 	image?:string
 }
 
-const { title="RajaKertas", description ="RajaKertas", image="./images/band.jpg" } = Astro.props;
+const { title="RajaKertas", description ="Kami adalah perusahaan yang menyediakan dan mendistribusikan kertas secara online. Dapatkan berbagai jenis kertas berkualitas dari kami", image="./images/band.jpg" } = Astro.props;
 ---
 
 <!doctype html>
