--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,6 +35,7 @@ const { title="RajaKertas", description ="Kami adalah perusahaan yang menyediaka
 		type="font/woff2"
 		crossorigin/>
 		<link rel="sitemap" href="/sitemap.xml" />
+		<link rel="canonical" href="https://rajakertas.id/">
 		<!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
 		<meta name="generator" content={Astro.generator} />
 		<meta property="og:image" content={image}/>
