--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -8,6 +8,7 @@ import Footer from "@/components/home/Footer.astro";
 ---
 
 <Layout title="contact-us">
+    <h1 class="hidden">Contact us</h1>
 <ContactUsCom/>
 <Footer/>
 </Layout>
