--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,8 @@ interface Props {
 	description?:string;
 	image?:string
 }
-const { title="RajaKertas", description ="Kami adalah perusahaan yang menyediakan dan mendistribusikan kertas secara online. Dapatkan berbagai jenis kertas berkualitas dari kami", image="./images/band.jpg" } = Astro.props;
+
+const { title, description ="Kami adalah perusahaan yang menyediakan dan mendistribusikan kertas secara online. Dapatkan berbagai jenis kertas berkualitas dari kami", image="./images/band.jpg" } = Astro.props;
 ---
 
 <!doctype html>
