--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Hero from '@/components/home/Hero.astro';
 import Gallery from '@/components/home/Gallery.astro';
 ---
 
-<Layout title="RajaKertas.">
+<Layout title="RajaKertas">
 	<main>
 	<Hero />
 	<Profile/>
