--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,19 +1,10 @@
 ---
+import NavbarComponent from "./Nav"
+import { getLogoHitam } from "@/helpers/rajaKertas";
 
-<header
-    class="flex justify-between items-center px-24 py-12 max-sm:px-5 max-sm:py-10 max-w-7xl justify-self-center w-full"
->
-    <a href="/" class="flex gap-x-4 items-center">
-        <img
-            src="/images/band.jpeg"
-            alt="rhythm nation logo"
-            width={64}
-            height={64}
-            class="w-16"
-        />
-
-        <p class="uppercase text-3xl text-zinc-900">blog</p>
-    </a>
-
-</header>
+const data = await getLogoHitam();
 ---
+
+<header>
+  <NavbarComponent client:load data={data}/>
+</header>
