--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -8,7 +8,11 @@ const response = await getHero()
 
 <section class='relative px-[7%]' >
     <div>
-        <div class="flex max-h-[60rem] min-h-svh items-center text-white">
+        <div style={
+          {
+            "height":'100vh'
+          }
+        } class="flex max-h-[60rem] items-center text-white">
             <div class="w-[800px]">
               <h1 class="mb-5 text-2xl leading-none font-semibold md:mb-6 md:text-5xl md:leading-tight">
                 {response.value.title}
