--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Partner from '@/components/home/Partner.astro';
 import Footer from '@/components/home/Footer.astro';
 import Hero from '@/components/home/Hero.astro';
 import Gallery from '@/components/home/Gallery.astro';
+import Navbar from '@/components/Navbar.astro';
 ---
 
 <Layout title="RajaKertas">
