--- a/src/components/Whatsapp.astro
+++ b/src/components/Whatsapp.astro
@@ -8,6 +8,5 @@ const response = await getWhatsapp()
 ---
 
 <div>
-    <ButtonWhatsapp client:load response={response}>
-   
+    {response !== undefined ?  <ButtonWhatsapp client:load response={response}/> : null}
     </div>
