--- a/src/components/home/Features.astro
+++ b/src/components/home/Features.astro
@@ -10,7 +10,7 @@ const response = await getKeunggulan()
     <div class="container">
       <div class="grid grid-cols-1 gap-y-12 lg:grid-cols-2 lg:items-center lg:gap-x-20">
         <div class="grid grid-cols-1 gap-x-10 gap-y-8 py-2 md:grid-cols-2">
-          {response?.value.map((unggul: any) => {
+          {response.value.length !== 0  ? response?.value.map((unggul: any) => {
                 return (
                   <div>
                     <div class="mb-2">
@@ -29,18 +29,20 @@ const response = await getKeunggulan()
                     <div class="mt-5 flex items-center gap-x-4 md:mt-6"></div>
                   </div>
                 );
-              })}
+              }) : null}
           
         </div>
      
           <div class="flex justify-center items-center">
-            <Image
+
+            {response !== undefined ?   <Image
               src={response.app_config_image}
               class="rounded-img"
               alt={"RajaKertas"}
               width={500}
               height={500}
-            />
+            /> : null}
+          
           </div>
 
       </div>
