--- a/src/components/home/Gallery.astro
+++ b/src/components/home/Gallery.astro
@@ -12,6 +12,8 @@ const {pathname} = Astro.url
         <h2 class="text-4xl font-bold">Galeri Gambar</h2>
         <p>Lihat berbagai penggunaan kertas dalam industri yang berbeda.</p>
     </div>
+
+    {response.results.length !== 0 ?  <CarouselComponent client:load gallery={response.results} produk={[]} type="gallery" pathname={pathname} /> : null}
   
-    <CarouselComponent client:load gallery={response.results} produk={[]} type="gallery" pathname={pathname} />
+   
 </section>
