--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -6,35 +6,36 @@ import { Image } from "astro:assets";
 const response = await getHero()
 ---
 
-<section class='relative px-[7%]' >
-    <div>
-        <div style={
-          {
-            "height":'100vh'
-          }
-        } class="flex max-h-[60rem] items-center text-white">
-            <div class="w-[800px]">
-              <h1 class="mb-5 text-2xl leading-none font-semibold md:mb-6 md:text-5xl md:leading-tight">
-                {response.value.title}
-              </h1>
-              <p class="text-md text-text-alternative md:text-lg">
-                {response.value.description}
-              </p>
-            </div>
-       
+<section class='relative px-[7%]' > 
+  {response !== undefined ? <div>
+    <div style={
+      {
+        "height":'100vh'
+      }
+    } class="flex max-h-[60rem] items-center text-white">
+        <div class="w-[800px]">
+          <h1 class="mb-5 text-2xl leading-none font-semibold md:mb-6 md:text-5xl md:leading-tight">
+            {response.value.title}
+          </h1>
+          <p class="text-md text-text-alternative md:text-lg">
+            {response.value.description}
+          </p>
         </div>
-
-        <div class="absolute inset-0 -z-10">
-            <Image
-              src={response.app_config_image}
-              alt={"rajaKertas"}
-              class="w-full h-full object-cover"
-              inferSize
-              loading="eager"
-           
-            />
-            <div class="absolute inset-0 bg-black/50" />
-          </div>
-
+   
     </div>
+
+    <div class="absolute inset-0 -z-10">
+        <Image
+          src={response.app_config_image}
+          alt={"rajaKertas"}
+          class="w-full h-full object-cover"
+          inferSize
+          loading="eager"
+       
+        />
+        <div class="absolute inset-0 bg-black/50" />
+      </div>
+
+</div> : null}
+    
 </section>
