--- a/src/components/home/Partner.astro
+++ b/src/components/home/Partner.astro
@@ -9,7 +9,8 @@ const response = await getPartner()
 <section class="flex flex-col justify-center items-center space-y-6 p-20 text-black bg-white">
    
         <h2 class=" text-2xl md:text-3xl lg:text-5xl font-extrabold ">Partner Kami</h2>
-        <Mitra client:only="react" data={response}/>
+        {response !== undefined ? <Mitra client:only="react" data={response}/> : null}
+        
 
     
    
