--- a/src/components/home/Produk.astro
+++ b/src/components/home/Produk.astro
@@ -25,8 +25,7 @@ const {pathname} = Astro.url
         </div>
       </div>
 
-    
- <CarouselComponent client:load produk={response.results} gallery={[]} type="produk" pathname={pathname} /> 
+      {response.results.length !== 0 ? <CarouselComponent client:load produk={response.results} gallery={[]} type="produk" pathname={pathname} />  : null}
     
  
 </section>
