--- a/src/components/kertas/Main.astro
+++ b/src/components/kertas/Main.astro
@@ -9,7 +9,9 @@ const response = await getProductList()
 <section class="bg-white text-black p-20 flex flex-col justify-center items-center space-y-10">
     <h2 class="text-6xl font-bold">Products</h2>
     <div class="grid lg:grid-cols-3 gap-4">
-   {response?.results.map((list: any) => (
+   {response.results.length!== 0 ?    
+   
+   response?.results.map((list: any) => (
             <a class="" href={`/product/${list.url_slug}`}>
       <Image class="mb-2" src={list.product.product_image} width={1000} height={1000} alt={list.product.product_image_alt} />
       <p
@@ -17,8 +19,7 @@ const response = await getProductList()
       >
         {list.product.title}
       </p>
-    </a>
-          ))
+    </a>)) : null
    }
     </div>
 </section>
